fix stylesheet for letter spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,6 @@ body {
     font-size: 18px;
     line-height:35px;
     font-weight: 400;
-    letter-spacing: 0.45;
+    letter-spacing: 0.45px;
     color: #516677;
 }
